// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`speedLossReasonsTableHeadersConf 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Speed loss reason",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "appendIcon": [Function],
    "appendIconClass": "ml-2",
    "appendIconSize": 16,
    "appendIconTooltipText": "Global group",
    "prependIcon": [Function],
    "prependIconColor": [Function],
    "prependIconSize": 16,
    "text": "Group",
    "textKey": "groupName",
    "value": "groupId",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": true,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`speedLossReasonsTableHeadersConf 2`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Speed loss reason",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "appendIcon": [Function],
    "appendIconClass": "ml-2",
    "appendIconSize": 16,
    "appendIconTooltipText": "Global group",
    "prependIcon": [Function],
    "prependIconColor": [Function],
    "prependIconSize": 16,
    "text": "Group",
    "textKey": "groupName",
    "value": "groupId",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": true,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`speedLossReasonsTableHeadersConf 3`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": false,
    "style": {
      "minWidth": "200px",
    },
    "text": "Speed loss reason",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": false,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": false,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`speedLossReasonsTableHeadersConf 4`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": false,
    "style": {
      "minWidth": "200px",
    },
    "text": "Speed loss reason",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": false,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": false,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;
